--- a/webapp/app/package.json
+++ b/webapp/app/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev -H 127.0.0.1 -p 3000",
     "dev:host": "next dev -p 3001 -H 0.0.0.0",
+    "dev:ipv4": "next dev -H 127.0.0.1 -p 3000",
+    "dev:ipv6": "next dev -H :: -p 3000",
+    "dev:3001": "next dev -H 127.0.0.1 -p 3001",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "next start -p 3000 -H 127.0.0.1",
     "start:host": "next start -p 3001",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
