--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,18 @@
 [pytest]
+# Keep output concise by default; override locally as needed
+addopts = -q
+
+# Discover tests under the standard tests/ directory
 testpaths = tests
 python_files = test_*.py
+
+# Silence asyncio fixture scope deprecation by setting the default explicitly
+asyncio_default_fixture_loop_scope = function
+
+# Filter noisy but non-actionable warnings in our environment
+filterwarnings =
+    # Starlette PendingDeprecation about python_multipart import
+    ignore:Please use `import python_multipart` instead:PendingDeprecationWarning
+    # Pydantic v2 generics warning from our Page generic model
+    ignore:Classes should inherit from `BaseModel` before generic classes
+
