--- a/webapp/app/package.json
+++ b/webapp/app/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-rnd": "10.4.13",
     "swr": "2.2.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.7"
