--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,20 @@ jobs:
             requirements.txt
             apps/server/requirements.txt
 
-      - name: Install dependencies
+      - name: Install dependencies (Linux/macOS)
+        if: runner.os != 'Windows'
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f apps/server/requirements.txt ]; then pip install -r apps/server/requirements.txt; fi
+
+      - name: Install dependencies (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          python -m pip install --upgrade pip
+          if (Test-Path requirements.txt) { pip install -r requirements.txt }
+          if (Test-Path apps/server/requirements.txt) { pip install -r apps/server/requirements.txt }
 
       - name: Install test extras (coverage)
         run: |
